# squid-sila2

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  pyproject.toml
src/connector/: __init__.py  __main__.py  squid.py
src/connector/features/microscope_service/: __init__.py  microscope_service.py  microscope_service_base.py
